--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-  background: #ddd;
-  margin: 1rem;
-  padding: 1rem;
-  max-width: 500px;
-  margin: 2rem auto;
-  font-family: "Open Sans", sans-serif;
+	background: #ddd;
+	margin: 1rem;
+	padding: 1rem;
+	max-width: 500px;
+	margin: 2rem auto;
+	font-family: "Open Sans", sans-serif;
 }
 
 nav {
@@ -38,10 +38,9 @@ img {
 }
 
 
-.form{
-}
+.form {}
 
-.form-input{
+.form-input {
 	display: block;
 	font-family: monospace;
 	background-color: white;
@@ -50,7 +49,7 @@ img {
 	padding: 5px;
 }
 
-.form-btn{
+.form-btn {
 	font-family: monospace;
 	background-color: coral;
 	color: white;
@@ -60,7 +59,7 @@ img {
 	transition: 500ms;
 }
 
-.form-btn:hover{
+.form-btn:hover {
 	background-color: grey;
 	color: white;
 }
